--- a/contato.html
+++ b/contato.html
@@ -2,103 +2,29 @@
 <html lang="pt-BR">
 
 <head>
+    <link rel="shortcut icon" href="./files/logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./index.css">
+    <script src="./index.js"></script>
 
-  <title>Contato | Jorge Souza</title>
-  <link rel="stylesheet" href="./css/index.css">
-  <script src="./javascript/index.js"></script>
-  <link rel="icon" type="image/x-icon" href="./logo.svg">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--SEO-->
-  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
-  <meta name="description" content="Jorge Souza Oliveira dos Santos">
-  <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info, 
-    desenvolvimento, web, design, web design, design grafico, tech, 
-    visual studio, visual studio code, vs code, c#, javascript, dotnet,
-    node js, dev express, html, css">
+    <title>Jorge Souza</title>
 </head>
 
-<menu-bar></menu-bar>
-<div class="js-page">
-  <div class="js-post">
-    <h1>Contato</h1>
-    <p>Entre em contato pelo meio de sua preferência ou conheça minhas mídias sociais.</p>
-  </div>
-  <!--#region CURSOS -->
-  <div class="container">
-    <a class="child" href="mailto:jorge.sos777@outlook.com" target="_blank">
-      <img src="./files/gmail.png" alt="">
-      <p>Gmail</p>
-    </a>
-    <a class="child" href="https://wa.me/5577991161892" target="_blank">
-      <img src="./files/whatsapp.png" alt="">
-      <p>Whatsapp</p>
-    </a>
-    <a class="child" href="https://www.instagram.com/jorgeoliveiraonline/" target="_blank">
-      <img src="./files/instagram.png" alt="">
-      <p>Instagram</p>
-    </a>
-    <a class="child" href="https://clubedeautores.com.br/livros/autores/jorge-souza-oliveira-dos-santos"
-      target="_blank">
-      <img src="./files/clube.png" alt="">
-      <p>Clube de Autores</p>
-    </a>
-    <a class="child" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">
-      <img src="./files/Workana.png" alt="">
-      <p>Workana</p>
-    </a>
-  </div>
-</div>
-<style>
-  * {
-    box-sizing: border-box;
-  }
 
-  .container {
-    background-color: var(--pretoMedio);
-    color: white;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 100px);
-    gap: auto;
-    padding: 30px 15% 30px 15%;
-  }
-
-  .child {
-    text-decoration: none;
-    font-family: sans-serif;
-    color: white;
-    vertical-align: middle;
-    opacity: 0.5;
-    transition-duration: 500ms;
-    filter: grayscale(1);
-  }
-
-  .child * {
-    text-align: center;
-    width: 70px;
-    display: block;
-    margin: 15px auto 15px auto;
-  }
-
-  .child p {
-    text-indent: 0;
-  }
-
-  .child:hover {
-    opacity: 1;
-    filter: grayscale(0);
-  }
-
-  @media (max-width: 600px) {
-    .child {
-      filter: grayscale(0);
-      opacity: 1;
-    }
-  }
-</style>
-<!--#endregion -->
+<body>
+    <div class="app" id="app">
+        <div class="js-page" id="js-page">
+            <div class="js-post">
+                Redirecionando, aguarde...
+            </div>
+            <!-- Default Elements -->
+            <div class="right-bar"></div>
+            <div class="left-bar"></div>
+            <div class="js-footer"></div>
+        </div>
+    </div>
+    <script>
+        window.location = "/?id=contato";
+    </script>
+</body>
 
 </html>
-
-<footer-bar></footer-bar>
-<btn-up></btn-up>
