--- a/index.html
+++ b/index.html
@@ -2,246 +2,249 @@
 <html lang="pt-BR">
 
 <head>
-
-  <title>Jorge Souza</title>
-  <link rel="stylesheet" href="./css/index.css">
-  <!--remover / inicial para desenvolvimento -->
-  <script src="./javascript/index.js"></script>
-  <!--remover / inicial para desenvolvimento -->
-  <link rel="icon" type="image/x-icon" href="./logo.svg">
-  <!--remover / inicial para desenvolvimento -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--SEO-->
+  <!-- #region META -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
   <meta name="author" content="Jorge Souza Oliveira dos Santos" />
   <meta name="description" content="Jorge Souza Oliveira dos Santos">
   <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info, 
-    desenvolvimento, web, design, web design, design grafico, tech, 
-    visual studio, visual studio code, vs code, c#, javascript, dotnet,
-    node js, dev express, html, css">
+        desenvolvimento, web, design, web design, design grafico, tech, 
+        visual studio, visual studio code, vs code, c#, javascript, dotnet,
+        node js, dev express, html, css">
+  <!-- #endregion -->
+
+  <link rel="shortcut icon" href="./files/logo.svg" type="image/x-icon">
+  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./portrait.css">
+  <script src="./index.js"></script>
+
+  <title>Jorge Souza</title>
 </head>
 
-<menu-bar></menu-bar>
+<body>
+  <!-- #region -->
+  <!-- #endregion -->
 
-<div class="img-slider present">
-  <span class="esq-btn rolar-btn" onclick="voltar()">
-    <p>&#9664;</p>
-  </span>
-  <div class="cont" id="cont0" href="#">
-    <img src="files/capa.webp">
-  </div>
-  <a class="cont" id="cont1" style="display: none;" href="cursos.html#informatica">
-    <img src="files/info.webp">
-  </a>
-  <a class="cont" id="cont2" style="display: none;" href="cursos.html#designgrafico">
-    <img src="files/design.webp">
-  </a>
-  <a class="cont" id="cont3" style="display: none;" href="cursos.html#webdesign">
-    <img src="files/webdesign.webp">
-  </a>
-  <a class="cont" id="cont4" style="display: none;" href="cursos.html#javascript">
-    <img src="files/javascript.webp">
-  </a>
-  <a class="cont" id="cont5" style="display: none;" href="cursos.html#webapp">
-    <img src="files/webapp.webp">
-  </a>
-  <a class="cont" id="cont6" style="display: none;" href="cursos.html#iaml">
-    <img src="files/IA.svg">
-  </a>
-  <span class="dir-btn rolar-btn" onclick="avancar()">
-    <p>&#9658;</p>
-  </span>
-</div>
-
-<script>
-  let index = 0;
-  cont = 6;
-  let cursos = {
-    "Início": "#",
-    "Informática": "",
-    "Design Gráfico": "",
-    "Web Design": "",
-    "Javascript": "",
-    "Desenvolvimento Web": "",
-    "C++": ""
-  };
-  function avancar() {
-    if (index < cont) {
-      document.getElementById(`cont${index}`).style.display = 'none';
-      document.getElementById(`cont${index + 1}`).style.display = 'block';
-      ++index;
-    } else {
-      document.getElementById(`cont${cont}`).style.display = 'none';
-      document.getElementById(`cont0`).style.display = 'block';
-      index = 0;
-    }
-  }
-  function voltar() {
-    if (index > 0) {
-      document.getElementById(`cont${index}`).style.display = 'none';
-      document.getElementById(`cont${index - 1}`).style.display = 'block';
-      --index;
-    } else {
-      document.getElementById(`cont0`).style.display = 'none';
-      document.getElementById(`cont${cont}`).style.display = 'block';
-      index = cont;
-    }
-  }
-</script>
-<style>
-  .present .esq-btn {
-    left: 0;
-    box-sizing: border-box;
-  }
-
-  .present .dir-btn {
-    right: 0;
-    box-sizing: border-box;
-  }
-
-  .present .rolar-btn {
-    position: absolute;
-    display: grid;
-    cursor: pointer;
-    height: 100%;
-    box-sizing: border-box;
-    place-items: center;
-    z-index: 1;
-  }
-
-  .rolar-btn p {
-    color: crimson;
-    padding: 30px 10px 30px 10px;
-    background-color: #7775;
-    font-size: 30px;
-    margin: 0;
-    box-sizing: border-box;
-  }
-
-  .present .rolar-btn p:hover {
-    background-color: black;
-    color: white;
-  }
-
-  @keyframes cont-transicao {
-    from {
-      scale: 0;
-    }
-
-    to {
-      scale: 1;
-    }
-  }
-
-  .present .cont {
-    margin: 0;
-    width: 100%;
-    box-sizing: border-box;
-    display: grid;
-    place-items: center;
-    animation: cont-transicao 1s;
-  }
-
-  .present .cont img {
-    width: 100%;
-    box-sizing: border-box;
-    pointer-events: none;
-    user-select: none;
-    z-index: 0;
-  }
-</style>
-
-
-
-
-<div class="js-page">
-  <div class="js-post">
-    <p><i>
-      OBS.: Em razão de problemas recentes com a plataforma do Clube de Autores, as apostilas estão sendo
-      transferidas gradualmente para a Amazon, o que deve levar alguns dias, por enquanto, os links das apostilas aqui
-      no site não estão funcionando, peço sua compreensão. Obrigado!
-      Enquanto isso, você pode encontrar as que já foram transferidas na minha página do autor
-      na Amazon, <a class="js-link" target="_blank" href="https://www.amazon.com.br/kindle-dbs/entity/author?asin=B0CM13195T">por meio deste link</a>.
-    </i></p>
-  </div>
-  <div class="js-post">
-    <h1>Seja muito bem-vindo!</h1>
-    <p>Seja para contratar um projeto, adquirir uma apostila do seu setor, ou aprender, este é seu lugar.</p>
-  </div>
-  <div class="js-post">
-    <h3>Sobre mim</h3>
-    <p>
-      Instrutor de cursos técnicos e profissionalizantes, projetista cadista no setor de arquitetura e interiores.
-      Morador da cidade de Luis Eduardo Magalhães no oeste da Bahia.
-    </p>
-  </div>
-  <div class="js-post">
-    <h3>Carreira</h3>
-    <p>
-      Aos 18 anos, enquanto cursava o terceiro ano do ensino médio, e após concluir um curso de Design Gráfico
-      na NIT Cursos, ingressei, por indicação do professor do curso, numa vaga de Designer Gráfico estagiário na Dignart
-      Publicidade Visual, trabalhando também como adesivador e na plotagem de projetos de
-      AutoCAD, enquanto fazia o curso de AutoCAD, também na NIT Cursos, para me aperfeiçoar no trabalho de plotagem.
-    </p>
-    <p>
-      Dois anos depois, decidido a trabalhar como projetista, encontrei uma vaga, também de estagiário, dessa vez
-      cadista, no escritório Zamuner Arquitetura, a passagem foi curta, pois ao final daquele mesmo ano, o arquiteto
-      fechou o
-      escritório para retornar para o Paraná, mas antes, me indicou para trabalhar na cidade vizinha no escritório de
-      decoração que lhe auxiliava no projetos. Mudei para Barreiras, e fui trabalhar no escritório da Light
-      and Design Interiores, como projetista, apesar da difícil adaptação à cidade por causa do transporte, trabalhei na
-      Light and Design por um ano, quando retornei para Luis Eduardo Magalhães, e fui chamado pela NIT Cursos
-      para ministrar o Curso de AutoCAD, o qual fui co-autor desenvolvendo também o material didático e a metodologia de
-      ensino. Devido ao trabalho em horário comercial como cadista na Radoll Arquitetura, ministrei as aulas de AutoCAD
-      no período noturno e aos sábados. Trabalhei ainda em outros escritórios de arquitetura e ministrei aulas de
-      AutoCAD também na Microlins.
-    </p>
-    <p>
-      Atualmente trabalho exclusivamente como freelancer e ministro aulas particulares de cursos profissionalizantes.
-    </p>
-  </div>
-  <div class="js-post">
-    <div style="display: inline-block; vertical-align: top;">
-      <h3>Formação</h3>
-      <ul>
-        <li>Ensino Médio Completo</li>
-        <li>Inglês Básico</li>
-        <li>Espanhol Básico</li>
-      </ul>
+  <!-- #region MENU -->
+  <div class="landscape-menu-container">
+    <span></span>
+    <div id="menu-home" class="menu-item active" onclick="Renderer.Home(this)">
+      <img src="./files/home.svg" alt="">
+      <span>Início</span>
     </div>
-    <div style="display: inline-block; vertical-align: top; margin-right: 25px;">
-      <h3>Habilidades</h3>
-      <ul>
-        <li>Instrutor de cursos técnico/profissionalizantes</li>
-        <li>Design Gráfico</li>
-        <li>Modelagem 3D e CAD (para Arquitetura e Interiores)</li>
-        <li>Desenvolvimento de software</li>
-      </ul>
+    <div id="menu-blog" class="menu-item" onclick="Renderer.Blog(this)">
+      <img src="./files/blog.svg" alt="">
+      <span>Blog</span>
     </div>
-  </div>
-  <div class="js-post">
-    <img src="/files/bitmap.jpg">
-  </div>
-  <div class="js-post" style="display: none;">
-    <p style="text-indent: 0; font-style: italic; text-align: center;">
-      Então Jesus tornou a falar-lhes, dizendo: Eu sou a luz do mundo; quem me segue de modo algum andará em trevas, mas
-      terá a luz da vida.<br>
-      João 8:12
-  </div>
-  <div class="js-post" style="width: 100%; display: none; grid-template-rows: auto 1fr;" id="ads">
-    <span style="display: grid; grid-template-columns: auto 1fr auto; color: white; font-family: sans-serif;">
-      <span>Publicidade</span>
-      <span></span>
-      <span onclick="document.getElementById('ads').style.display = 'none'"
-        style="cursor: pointer; color: #F30;">Fechar</span>
-    </span>
-    <div style="width: 100%;">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7018638705666056"
-        crossorigin="anonymous"></script>
+    <div id="menu-learn" class="menu-item" onclick="Renderer.Learn(this)">
+      <img src="./files/learn.svg" alt="">
+      <span>Cursos</span>
     </div>
+    <div id="menu-contacts" class="menu-item" onclick="Renderer.Contacts(this)">
+      <img src="./files/contacts.svg" alt="">
+      <span>Contato</span>
+    </div>
+    <span></span>
   </div>
-</div>
+  <!-- #endregion -->
+
+  <!-- #region PAGE -->
+  <div class="left-bar"></div>
+  <div class="js-page" id="js-page">
+
+    <!-- #region RODAPÉ -->
+    <div class="js-footer" id="js-footer">
+      <div class="footer-conteiner">
+        <span class="footer-title">Cursos</span>
+        <a class="footer-item" href="#">Informática Básica e Avançada</a>
+        <a class="footer-item" href="#">Design Gráfico</a>
+        <a class="footer-item" href="#">Web Design (HTML e CSS)</a>
+        <a class="footer-item" href="#">Javascript</a>
+        <a class="footer-item" href="#">Aplicações Web</a>
+        <a class="footer-item" href="#">Inteligência Artificial</a>
+      </div>
+      <div class="footer-conteiner">
+        <span class="footer-title">Apostilas</span>
+        <a class="footer-item" href="#" target="_blank">Informática Básica e Avançada</a>
+        <a class="footer-item" href="#" target="_blank">Design Gráfico</a>
+        <a class="footer-item" href="#" target="_blank">Web Design (HTML e CSS)</a>
+        <a class="footer-item" href="#" target="_blank">Javascript</a>
+        <a class="footer-item" href="#" target="_blank">Aplicações Web</a>
+        <a class="footer-item" href="#" target="_blank">Inteligência Artificial</a>
+      </div>
+      <div class="footer-conteiner">
+        <span class="footer-title">Contato</span>
+        <a class="footer-item" href="mailto:jorge.sos777@outlook.com" target="_blank">Gmail</a>
+        <a class="footer-item" href="https://wa.me/5577991161892" target="_blank">Whatsapp</a>
+        <a class="footer-item" href="https://www.youtube.com/@jorgeoliveiraonline" target="_blank">Youtube</a>
+        <a class="footer-item" href="https://www.instagram.com/jorgesouzoficial/" target="_blank">Instagram</a>
+        <a class="footer-item" href="https://www.amazon.com.br/stores/author/B0CM13195T" target="_blank">Amazon</a>
+        <a class="footer-item" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">Workana</a>
+      </div>
+      <div class="credit-container">
+        <hr class="js-divider">
+        <img src="./files/logo_amarela.svg" alt="">
+        <span class="footer-title" id="credit" style="text-align: center;"></span>
+        <script>
+          document.getElementById("credit").innerHTML = `Copyright © ${new Date().getFullYear()} | Jorge Souza Oliveira dos Santos`;
+        </script>
+        <span class="footer-item" style="text-align: center; font-size: 0.8em">Desenvolvido por: "Mim mesmo 😎"</span>
+      </div>
+    </div>
+    <!-- #endregion -->
+
+    <!-- #region POSTs -->
+    <div class="js-post banner">
+      <h1 style="display: none;">Formação</h1>
+      <h2 style="width: 100%;">Escolar</h2>
+      <li>Ensino médio completo</li>
+      <li>Inglês Básico</li>
+      <li>Espanhol Básico</li>
+      <h2 style="width: 100%;">Técnica</h2>
+      <li>Instrutor de cursos profissionalizantes</li>
+      <li>Desenho Técnico (CAD)</li>
+      <li>Design Gráfico</li>
+      <li>Programação e Desenvolvimento Web</li>
+    </div>
+
+    <div class="js-post banner">
+      <h1 style="display: none;">Carreira</h1>
+      <p>
+        Aos 18 anos, enquanto cursava o terceiro ano do ensino médio, e após concluir um curso de Design Gráfico
+        na NIT Cursos, ingressei, por indicação do professor do curso, numa vaga de Designer Gráfico estagiário na
+        Dignart
+        Publicidade Visual, trabalhando também como adesivador e na plotagem de projetos de
+        AutoCAD, enquanto fazia o curso de AutoCAD, também na NIT Cursos, para me aperfeiçoar no trabalho de plotagem.
+      </p>
+      <p>
+        Dois anos depois, decidido a trabalhar como projetista, encontrei uma vaga, também de estagiário, dessa vez
+        cadista, no escritório Zamuner Arquitetura, a passagem foi curta, pois ao final daquele mesmo ano, o arquiteto
+        fechou o
+        escritório para retornar para o Paraná, mas antes, me indicou para trabalhar na cidade vizinha no escritório
+        de
+        decoração que lhe auxiliava no projetos. Mudei para Barreiras, e fui trabalhar no escritório da Light
+        and Design Interiores, como projetista, apesar da difícil adaptação à cidade por causa do transporte,
+        trabalhei na
+        Light and Design por um ano, quando retornei para Luis Eduardo Magalhães, e fui chamado pela NIT Cursos
+        para ministrar o Curso de AutoCAD, o qual fui co-autor desenvolvendo também o material didático e a
+        metodologia de
+        ensino. Devido ao trabalho em horário comercial como cadista na Radoll Arquitetura, ministrei as aulas de
+        AutoCAD
+        no período noturno e aos sábados. Trabalhei ainda em outros escritórios de arquitetura e ministrei aulas de
+        AutoCAD também na Microlins.
+      </p>
+      <p>
+        Atualmente trabalho exclusivamente como freelancer e ministro aulas particulares de cursos
+        profissionalizantes.
+      </p>
+    </div>
+
+    <div class="js-post banner">
+      <h1 style="display: none;">Seja muito bem-vindo!</h1>
+      <p>
+        Seja para contratar um projeto, adquirir uma apostila do seu setor, ou aprender, este é seu lugar.
+      </p>
+    </div>
+
+    <div class="banner js-post">
+      <div class="circle-image"></div>
+      <h1>Jorge Souza Oliveira dos Santos</h1>
+      <h3>Projetista, Professor de Informática, apaixonado por livros, tecnologia e,
+        sobretudo, Deus!</h3>
+      <hr class="js-divider">
+      <p>
+        Instrutor de cursos técnicos profissionalizantes no setor de informática, em especial
+        Informática Básica e Avançada, Design Gráfico, Desenvolvimento Web e Programação de
+        Computadores, Desenvolvimento de Jogos, Inteligência Artificial.
+        Atuante como professor particular e em escolas de cursos profissionalizantes desde o
+        ano de 2011.
+        Projetista Cadista no setor de Arquitetura e Interiores com ênfase em AutoCAD,
+        projetos executivos e detalhamentos 2D. Atuante no setor desde o ano de 2008.
+      </p>
+    </div>
+    <!-- #endregion -->
+
+    <!-- #region JS-PRESENTATION -->
+    <div id="js-video-present-H" class="js-video-present-container">
+      <video id="js-video-present1" class="js-video-present" src="./files/JSPresent/H.mp4" type="video/mp4"
+        onclick="Renderer.Learn()" muted autoplay loop>
+        <script>
+          addEventListener("load", e => {
+            document.getElementById("js-video-present1").playbackRate = 0.5;
+          })
+        </script>
+      </video>
+      <div class="js-video-present-controls">
+        <button class="js-video-present-button retroceder" onclick="retrocederVideoH()"></button>
+        <button id="play-pause" class="js-video-present-button play-pause" onclick="pausarOuRetomarVideoH(this)"></button>
+        <button class="js-video-present-button avancar" onclick="avancarVideoH()"></button>
+      </div>
+      <script>
+        function retrocederVideoH() {
+          document.getElementById("js-video-present1").currentTime -= 5;
+        }
+        function pausarOuRetomarVideoH(el) {
+          if (document.getElementById("js-video-present1").paused) {
+            document.getElementById("js-video-present1").play();
+            el.style.backgroundImage = "url('./files/JSPresent/pause.svg')";
+
+          } else {
+            document.getElementById("js-video-present1").pause();
+            el.style.backgroundImage = "url('./files/JSPresent/play.svg')";
+          }
+        }
+        function avancarVideoH() {
+          document.getElementById("js-video-present1").currentTime += 5;
+        }
+      </script>
+    </div>
+    <div id="js-video-present-V" class="js-video-present-container">
+      <video id="js-video-present2" class="js-video-present" src="./files/JSPresent/V.mp4" type="video/mp4"
+        onclick="Renderer.Learn()" muted autoplay loop>
+      </video>
+      <div class="js-video-present-controls">
+        <button class="js-video-present-button retroceder" onclick="retrocederVideoV()"></button>
+        <button id="play-pause" class="js-video-present-button play-pause" onclick="pausarOuRetomarVideoV(this)"></button>
+        <button class="js-video-present-button avancar" onclick="avancarVideoV()"></button>
+      </div>
+      <script>
+        function retrocederVideoV() {
+          document.getElementById("js-video-present2").currentTime -= 5;
+        }
+        function pausarOuRetomarVideoV(el) {
+          if (document.getElementById("js-video-present2").paused) {
+            document.getElementById("js-video-present2").play();
+            el.style.backgroundImage = "url('./files/JSPresent/pause.svg')";
+
+          } else {
+            document.getElementById("js-video-present2").pause();
+            el.style.backgroundImage = "url('./files/JSPresent/play.svg')";
+          }
+        }
+        function avancarVideoV() {
+          document.getElementById("js-video-present2").currentTime += 5;
+        }
+      </script>
+    </div>
+    <!-- #endregion -->
+
+  </div>
+  <div class="right-bar"></div>
+  <!-- #endregion -->
+
+  <!-- #region TOP-BUTTON -->
+  <div id="top-button" title="Voltar para o topo" onclick="window.scrollTo( { top: 0, left: 0, behavior: 'smooth' } )">
+    <svg fill="#ffbb00" width="64px" height="64px" viewBox="-2.4 -2.4 28.80 28.80" xmlns="http://www.w3.org/2000/svg"
+      stroke="#ffbb00" stroke-width="0.00024000000000000003" transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)">
+      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+      <g id="SVGRepo_iconCarrier">
+        <path d="M5 21h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2zm7-14 5 5h-4v5h-2v-5H7l5-5z">
+        </path>
+      </g>
+    </svg>
+  </div>
+  <!-- #endregion -->
+
+</body>
 
 </html>
-<footer-bar></footer-bar>
-<btn-up></btn-up>
