--- a/index.html
+++ b/index.html
@@ -55,28 +55,75 @@
     <div class="js-footer" id="js-footer">
       <div class="footer-conteiner">
         <span class="footer-title">Cursos</span>
-        <a class="footer-item" href="#">Informática Básica e Avançada</a>
-        <a class="footer-item" href="#">Design Gráfico</a>
-        <a class="footer-item" href="#">Web Design (HTML e CSS)</a>
-        <a class="footer-item" href="#">Javascript</a>
-        <a class="footer-item" href="#">Aplicações Web</a>
-        <a class="footer-item" href="#">Inteligência Artificial</a>
+        <a class="footer-item" onclick="{
+          window.location = '#info';
+          Renderer.Learn();
+          //
+        }">Informática Básica e Avançada</a>
+        <a class="footer-item" onclick="{
+          window.location = '#design';
+          Renderer.Learn();
+          //
+        }">Design Gráfico</a>
+        <a class="footer-item" onclick="{
+          window.location = '#web';
+          Renderer.Learn();
+          //
+        }">Web Design (HTML e CSS)</a>
+        <a class="footer-item" onclick="{
+          window.location = '#js';
+          Renderer.Learn();
+          //
+        }">Javascript</a>
+        <a class="footer-item" onclick="{
+          window.location = '#app';
+          Renderer.Learn();
+          //
+        }">Aplicações Web</a>
+        <a class="footer-item" onclick="{
+          window.location = '#ia';
+          Renderer.Learn();
+          //
+        }">Inteligência Artificial</a>
       </div>
       <div class="footer-conteiner">
         <span class="footer-title">Apostilas</span>
-        <a class="footer-item" href="#" target="_blank">Informática Básica e Avançada</a>
-        <a class="footer-item" href="#" target="_blank">Design Gráfico</a>
-        <a class="footer-item" href="#" target="_blank">Web Design (HTML e CSS)</a>
-        <a class="footer-item" href="#" target="_blank">Javascript</a>
-        <a class="footer-item" href="#" target="_blank">Aplicações Web</a>
-        <a class="footer-item" href="#" target="_blank">Inteligência Artificial</a>
+        <a class="footer-item"  onclick="{
+          window.location = '#info';
+          Renderer.Learn();
+          //
+        }">Informática Básica e Avançada</a>
+        <a class="footer-item"  onclick="{
+          window.location = '#design';
+          Renderer.Learn();
+          //
+        }">Design Gráfico</a>
+        <a class="footer-item"  onclick="{
+          window.location = '#web';
+          Renderer.Learn();
+          //
+        }">Web Design (HTML e CSS)</a>
+        <a class="footer-item"  onclick="{
+          window.location = '#js';
+          Renderer.Learn();
+          //
+        }">Javascript</a>
+        <a class="footer-item"  onclick="{
+          window.location = '#app';
+          Renderer.Learn();
+          //
+        }">Aplicações Web</a>
+        <a class="footer-item"  onclick="{
+          window.location = '#ia';
+          Renderer.Learn();
+          //
+        }">Inteligência Artificial</a>
       </div>
       <div class="footer-conteiner">
         <span class="footer-title">Contato</span>
         <a class="footer-item" href="mailto:jorge.sos777@outlook.com" target="_blank">Gmail</a>
         <a class="footer-item" href="https://wa.me/5577991161892" target="_blank">Whatsapp</a>
         <a class="footer-item" href="https://www.youtube.com/@jorgeoliveiraonline" target="_blank">Youtube</a>
-        <a class="footer-item" href="https://www.instagram.com/jorgesouzoficial/" target="_blank">Instagram</a>
         <a class="footer-item" href="https://www.amazon.com.br/stores/author/B0CM13195T" target="_blank">Amazon</a>
         <a class="footer-item" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">Workana</a>
       </div>
