--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- #endregion -->
 
   <!-- #region MENU -->
-  <div class="landscape-menu-container">
+  <div id="menu-container" class="landscape-menu-container landscape-menu-transparent">
     <span></span>
     <div id="menu-home" class="menu-item active" onclick="Renderer.Home(this)">
       <img src="./files/home.svg" alt="">
