--- a/index.html
+++ b/index.html
@@ -195,11 +195,10 @@
     <div class="banner js-post">
       <div class="circle-image"></div>
       <h1>Jorge Souza Oliveira dos Santos</h1>
-      <h3>Projetista, Professor de Informática, apaixonado por livros, tecnologia e,
-        sobretudo, Deus!</h3>
+      <h3>Projetista, Instrutor de Informática</h3>
       <hr class="js-divider">
       <p>
-        Instrutor de cursos técnicos profissionalizantes no setor de informática, em especial
+        Instrutor de cursos técnicos e profissionalizantes no setor de informática, em especial
         Informática Básica e Avançada, Design Gráfico, Desenvolvimento Web e Programação de
         Computadores, Desenvolvimento de Jogos, Inteligência Artificial.
         Atuante como professor particular e em escolas de cursos profissionalizantes desde o
