--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src="./files/home.svg" alt="">
       <span>Início</span>
     </div>
-    <div id="menu-blog" class="menu-item" onclick="Renderer.Blog(this)">
+    <div id="menu-blog" class="menu-item" onclick="Renderer.Blog(this)" style="display: none;">
       <img src="./files/blog.svg" alt="">
       <span>Blog</span>
     </div>
