--- a/index.html
+++ b/index.html
@@ -190,12 +190,11 @@
       <hr class="js-divider">
       <p>
         Instrutor de cursos técnicos e profissionalizantes no setor de informática, em especial
-        Informática Básica e Avançada, Design Gráfico, Desenvolvimento Web e Programação de
-        Computadores, Desenvolvimento de Jogos, Inteligência Artificial.
-        Atuante como professor particular e em escolas de cursos profissionalizantes desde o
-        ano de 2011.
+        Desenho Técnico e Modelagem 3D (AutoCAD e 3Ds Max), Informática Básica e Avançada, Design Gráfico,
+        Desenvolvimento Web e Programação de Computadores.
+        Atuante como professor particular e em escolas de cursos profissionalizantes desde o ano de 2011.
         Projetista Cadista no setor de Arquitetura e Interiores com ênfase em AutoCAD,
-        projetos executivos e detalhamentos 2D. Atuante no setor desde o ano de 2008.
+        projetos executivos e detalhamentos 2D, atuante no setor desde o ano de 2008.
       </p>
     </div>
     <!-- #endregion -->
