--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
       </div>
       <div class="footer-conteiner">
         <span class="footer-title">Apostilas</span>
-        <a class="footer-item"  onclick="{
+        <a class="footer-item" onclick="{
           window.location = '#info';
           Renderer.Learn();
           //
         }">Informática Básica e Avançada</a>
-        <a class="footer-item"  onclick="{
+        <a class="footer-item" onclick="{
           window.location = '#design';
           Renderer.Learn();
           //
         }">Design Gráfico</a>
-        <a class="footer-item"  onclick="{
+        <a class="footer-item" onclick="{
           window.location = '#web';
           Renderer.Learn();
           //
         }">Web Design (HTML e CSS)</a>
-        <a class="footer-item"  onclick="{
+        <a class="footer-item" onclick="{
           window.location = '#js';
           Renderer.Learn();
           //
@@ -116,7 +116,8 @@
         <a class="footer-item" href="mailto:jorge.sos777@outlook.com" target="_blank">Gmail</a>
         <a class="footer-item" href="https://wa.me/5577991161892" target="_blank">Whatsapp</a>
         <a class="footer-item" href="https://www.amazon.com.br/stores/author/B0CM13195T" target="_blank">Amazon</a>
-        <a class="footer-item" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5" target="_blank">Workana</a>
+        <a class="footer-item" href="https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5"
+          target="_blank">Workana</a>
       </div>
       <div class="credit-container">
         <hr class="js-divider">
@@ -184,10 +185,7 @@
     </div>
 
     <div class="banner js-post">
-      <div class="circle-image"></div>
-      <h1>Jorge Souza Oliveira dos Santos</h1>
       <h3>Projetista, Instrutor de Informática</h3>
-      <hr class="js-divider">
       <p>
         Instrutor de cursos técnicos e profissionalizantes no setor de informática, em especial
         Desenho Técnico e Modelagem 3D (AutoCAD e 3Ds Max), Informática Básica e Avançada, Design Gráfico,
@@ -196,6 +194,11 @@
         Projetista Cadista no setor de Arquitetura e Interiores com ênfase em AutoCAD,
         projetos executivos e detalhamentos 2D, atuante no setor desde o ano de 2008.
       </p>
+    </div>
+
+    <div class="banner js-post">
+      <div class="circle-image"></div>
+      <h1>Jorge Souza Oliveira dos Santos</h1>
     </div>
     <!-- #endregion -->
 
@@ -211,7 +214,8 @@
       </video>
       <div class="js-video-present-controls">
         <button class="js-video-present-button retroceder" onclick="retrocederVideoH()"></button>
-        <button id="play-pause" class="js-video-present-button play-pause" onclick="pausarOuRetomarVideoH(this)"></button>
+        <button id="play-pause" class="js-video-present-button play-pause"
+          onclick="pausarOuRetomarVideoH(this)"></button>
         <button class="js-video-present-button avancar" onclick="avancarVideoH()"></button>
       </div>
       <script>
@@ -239,7 +243,8 @@
       </video>
       <div class="js-video-present-controls">
         <button class="js-video-present-button retroceder" onclick="retrocederVideoV()"></button>
-        <button id="play-pause" class="js-video-present-button play-pause" onclick="pausarOuRetomarVideoV(this)"></button>
+        <button id="play-pause" class="js-video-present-button play-pause"
+          onclick="pausarOuRetomarVideoV(this)"></button>
         <button class="js-video-present-button avancar" onclick="avancarVideoV()"></button>
       </div>
       <script>
