--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <!-- #endregion -->
 
   <link rel="shortcut icon" href="./files/logo.svg" type="image/x-icon">
-  <link rel="stylesheet" href="./index.css">
-  <link rel="stylesheet" href="./portrait.css">
+  <link rel="stylesheet" href="./index.css" title="index-style">
+  <link rel="stylesheet" href="./portrait.css" title="portrait-style">
   <script src="./index.js"></script>
 
   <title>Jorge Souza</title>
@@ -126,7 +126,6 @@
         <script>
           document.getElementById("credit").innerHTML = `Copyright © ${new Date().getFullYear()} | Jorge Souza Oliveira dos Santos`;
         </script>
-        <span class="footer-item" style="text-align: center; font-size: 0.8em">Desenvolvido por: "Mim mesmo 😎"</span>
       </div>
     </div>
     <!-- #endregion -->
